--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,8 +10,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <title>React App</title>
   </head>
-  <body style="height: 100vh;border:2px solid red">
+  <body >
     
-    <div id="root" style="height: 100vh;border:2px solid red"></div>
+    <div id="root" ></div>
   </body>
 </html>
